# pyvplm

./: pyproject.toml
.github/workflows/: tests.yml
pyvplm/addon/: comsoladdon.py  variablepowerlaw.py
