[tool.black]
    line-length = 100

[tool.poetry]
    name = "pyvplm"
    version = "0.1.0"
    description = "Variable Power-Law regression Models tool"
    authors = [
        "Aurélien REYSSET <aurelien.reysset@insa-toulouse.fr>",
        "Marc BUDINGER <marc.budinger@insa-toulouse.fr>",
        "Scott DELBECQ <scott.delbecq@isae-supaero.fr>"
    ]
    license = "MIT"
    readme = "README.md"
    homepage = "https://github.com/SizingLab/pyvplm"
    keywords = [
        "regression",
        "dimensional analysis",
        "metamodeling"
    ]
    classifiers = [
        "Environment :: Console",
        "Intended Audience :: Science/Research",
        "Intended Audience :: Education",
        "License :: OSI Approved :: MIT License",
        "Natural Language :: English",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Topic :: Scientific/Engineering :: Physics"
    ]
    include = [
        "LICENSE"
    ]

[tool.poetry.dependencies]
    python = ">=3.8, <3.12"
    numpy = [
        { version = ">=1.22.0, <1.25", python = "~3.8" },
        { version = ">=1.23.2, <3", python = ">=3.9, <3.12" },
        { version = ">=1.26, <3", python = "^3.12" },
    ]
    scipy = [
        { version = ">=1.9.3, <1.11", python = "~3.8" },
        { version = "^1.11.2", python = "^3.9" },
    ]
    scikit-learn = "*"
    pandas = [
        { version = ">=1.3.4, <3", python = ">=3.8, <3.11" },
        { version = ">=1.5.3, <3", python = "^3.11" },
    ]
    sympy="*"
    latex = "*"
    matplotlib = "*"
    ipywidgets = "*"
    ipython = "*"
    pydoe2 = "1.3.0"
    pint = "*"
    xlwt = "*"
    xlrd = "*"
    openpyxl = "*"

[tool.poetry.group.dev.dependencies]
    wheel = "*"
    pytest = "^8.0"
    pytest-cov = "^5.0"
    pre-commit = "*"
    black = { version = "*", allow-prereleases = true }
    pylint = "*"
    nbval = "^0.11"
    sphinx = "4.2.0"
    jinja2 = "3.0.0"
    mkdocs = "1.2.3"
    sphinx-rtd-theme = "1.0.0"
    readthedocs-sphinx-search = "0.1.1"
    sphinxcontrib-bibtex = "*"
    recommonmark = "*"
    flake8 = "^4.0.1"
    nbstripout = "^0.5.0"

[build-system]
    requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
    build-backend = "poetry_dynamic_versioning.backend"